# lottie2vf

./: README.md  pyproject.toml  requirements.txt
examples/: a-circle.json  bounce-gradient.json  bouncy-dots.json  cat-simple.json  cat.json  cigratte-man.json  crying.json  exp.json  fire.json  gear.json  gear2.json  gradient-blob.json  legs.json  rabbit.json  rabbit2.json  shapes.json  square.json  sweat-grin.json  sweat.json
lottie2vf/: __main__.py  font.py  lottieparser.py  paintcompiler.py  transformation.py
